# cryptoflow

./: .env.example  .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0638d2178d1f_add_indexes_improve_alert_model.py  1c04ca751424_add_ath_atl_supply_fields_to_dim_coin.py  1d558ccbc42d_add_price_alerts.py  650a7819bb0b_initial_schema.py  a1b2c3d4e5f6_add_performance_indexes.py  b3d7f9a1c2e4_add_webhook_url_to_users.py  c4e5f6a7b8d9_add_webhook_status_to_alerts.py  c5a0f32289e1_add_portfolio_holdings.py  f906206b051b_add_user_watchlist.py  ffa6e2c5127a_add_password_reset_fields.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/models/: __init__.py  alert.py  analytics.py  coin.py  market_data.py  pipeline.py  portfolio.py  quality.py  time_dim.py  user.py  watchlist.py
backend/app/routers/: __init__.py  alerts.py  analytics.py  auth.py  coins.py  health.py  market.py  pipeline.py  portfolio.py  public_api.py  quality.py  watchlist.py  websocket.py
backend/app/schemas/: analytics.py  auth.py  coin.py  market.py  pagination.py  pipeline.py  portfolio.py  public_api.py  quality.py  watchlist.py
backend/app/services/: analytics_service.py  attribution_service.py  coingecko.py  insights_service.py  market_service.py  quality_service.py  report_service.py  sentiment_service.py
backend/app/utils/: rate_limiter.py  url_validation.py
backend/app/websocket/: manager.py
backend/tests/: conftest.py
backend/tests/test_routers/: test_alerts.py  (+10 more)
(+128 files in other folders)
